fixed car list on small screens

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -29,8 +29,6 @@ body{
     src: url("./fonts/fonts/museoSans.ttf") format("TrueType");
   }
 
-
-
 hr{
     width: 70%;
     margin: 0;
@@ -61,6 +59,7 @@ a{
     color: #e4e4e4;
     background-color: purple;
     border-bottom: #e4e4e4 solid 2px;
+    z-index: 2;
 
     a{
         text-decoration: none;
@@ -95,10 +94,9 @@ a{
 }
 
 .container{
-    margin-top: 75px;
     width: 100%;
     position: relative;
-    top: 65px;
+    top: 120px;
     @include flex-center();
     
     .homeSection{
@@ -153,9 +151,6 @@ a{
                 padding: 3px;
                 padding-left: 10px;
             }
-
-
-
         }
 
         .viewAllBtn, .submitBtn{
@@ -179,60 +174,59 @@ a{
     }
     
     .carList{
-    max-height: 400px;
-    width: auto;
-    padding: 0;
-    box-sizing: border-box;
-    @include flex-center();
+        height: 100%;
+        width: auto;
+        padding: 0;
+        box-sizing: border-box;
+        @include flex-center();
+        z-index: 1;
 
-    .carListItem{
-        width: 100%;
-        margin: 10px;
-        margin-left: 0;
-        margin-right: 0;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: center;
-        border: 1px solid #e4e4e4;
-        padding: 5%;
-        color: #e4e4e4;
-        font-size: 1.1rem;
-        border-radius: 5px;
-        
-        .buttonsDiv{
+        .carListItem{
+            width: 100%;
+            height: auto;
+            margin: 10px;
+            margin-left: 0;
+            margin-right: 0;
             display: flex;
             flex-direction: row;
-            justify-content: space-around;
-            width: 100px;
-        
-            .deleteBtn{
-                background-color: red;
-                border: none;
-                outline: none;
-                font-size: 1rem;
-                cursor: pointer;
-            }
-        
-            .viewBtn{
-                background-color: #e4e4e4;
-                border: none;
-                outline: none;
-                font-size: 1rem;
-                cursor: pointer;
+            justify-content: space-evenly;
+            align-items: center;
+            border: 1px solid #e4e4e4;
+            padding: 2.5%;
+            color: #e4e4e4;
+            font-size: 1.1rem;
+            border-radius: 5px;
+            
+            .buttonsDiv{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                width: 100px;
+            
+                .deleteBtn{
+                    background-color: red;
+                    border: none;
+                    outline: none;
+                    font-size: 1rem;
+                    cursor: pointer;
+                }
+            
+                .viewBtn{
+                    background-color: #e4e4e4;
+                    border: none;
+                    outline: none;
+                    font-size: 1rem;
+                    cursor: pointer;
+                }
             }
         }
-    }
 
-    @media(max-width: 550px) {
-        width: 350px;
-        .carListItem{ flex-direction: column; }
-        .buttonsDiv{ flex-direction: row; margin-top: 5px;}
-    }
+        @media(max-width: 550px) {
+            // width: 350px;
+            .carListItem{ flex-direction: column; }
+            .buttonsDiv{ flex-direction: row; margin-top: 5px;}
+        }
 
-    @media(max-width: 450px) {
-        width: 310px;
-    }
     }
 
     .singleDiv{
@@ -303,14 +297,17 @@ a{
             }
 
             .newCarForm{
-                width: 90%;
+                width: 85%;
                 height: 125px;
 
                 .input{
                     font-size: 1.1rem;
                 }
             }
-        }
+
+
+        }            
+
     }
 
     @media(max-width: 400px) {
@@ -328,6 +325,15 @@ a{
             .pDiv{
                 .homeP{
                     font-size: 1.03rem;
+                }
+            }
+        }        
+        .carList{
+            .carListItem{
+                margin: 5px 0;
+                padding: 5px;
+                .buttonDiv{
+
                 }
             }
         }
